--- a/ma.css
+++ b/ma.css
@@ -70,7 +70,7 @@ h1
 }
 .card.three
 {
-    background-image: linear-gradient(to bottom, rgba(255, 255, 255), rgba(255, 255, 255, 0.1)), url("imgs/26170794_1701128346575364_4203517123001717461_o.jpg"); 
+    background-image: linear-gradient(to bottom, rgba(255, 255, 255), rgba(255, 255, 255, 0.1)), url("imgs/131226472_296495261783009_7313505018171470669_n.png"); 
 }
 
  .card .text-container {
